@@ -1,3 +1,7 @@
+2010-09-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* configure.ac, geotiff_proj4.c: Avoid use of projects.h. (GDAL #3761)
+
 2010-05-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/Makefile.am: add getopt.c to distribution.
